<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/mnuTitle"
    android:title="@string/fragment_bottomsheet_options">
    <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/mnuSave"
                android:enabled="true"
                android:title="@string/frg_bottonsheet_save"
                android:icon="@drawable/ic_save_black_24dp"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/mnuDial"
                android:icon="@drawable/ic_call_black_24dp"
                android:enabled="true"
                android:title="@string/frg_bottonsheet_dial"
                app:showAsAction="ifRoom" />
        </group>
    </menu>
</item>

</menu>